# DirectMusic-shared-interface

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/dmusic/cffi/: Api.h  directmusic.h  mixer.h  music.h  patternlist.h
src/: directmusic.cc  mixer.cc  music.cc
